# egregore-site

./: .egregore-state.json  .env.example  .gitignore  .mcp.json  .syncignore  CLAUDE.md  DESIGN-BRIEF-emissary-landing.md  DEV.md  Dockerfile  README.md  TELEGRAM_BOT_PLAN.md  astro.config.mjs  egregore-graph.html  egregore-internals.html  egregore.json  index.html  landing.html  mcp.json  mcp.shared.json  mcp.shared.macos.json  mcp.shared.windows.json  memory  netlify.toml  next.config.mjs  package-lock.json  package.json  start.command  start.sh  tsconfig.json  vite.config.js
.claude/: mcp.json  settings.json
api/: .env.example  Dockerfile  auth.py  main.py  models.py  requirements.txt
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
ascii-oracle/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
blog/: .gitignore  SEO-REVIEW-NEEDED.md  astro.config.mjs  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml
data/: events.db  projections.db
design-commission/: COMMISSION.md  URLS.md
docs/: egregore-ecosystem.html  multi-repo.md
egregore-site/: index.html  package.json  vite.config.js
tests/: .gitignore  README.md  backfill_neo4j.py  conftest.py  legacy_test_retrievals.py  pyproject.toml  test_capture.py  test_full_flow.py  test_guard.py  test_install_flows.py  test_invite_flow.py  test_org_scope.py  test_quality.py  test_retrieval.py  test_security.py  test_setup_integration.py  test_sync.py  test_tenant_isolation.py  test_tokens.py
tests/utils/: frontmatter.py  neo4j_helpers.py
(+327 files in other folders)
